--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -1,100 +1,33 @@
-<!DOCTYPE html>
-<html lang="en-us">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | ENspider</title>
-    <link rel="shortcut icon" href="../assets/TemplateData/favicon.ico">
-    <link rel="stylesheet" href="../assets/TemplateData/style.css">
-  </head>
-  <body>
-    <div id="unity-container" class="unity-desktop">
-      <canvas id="unity-canvas" width=960 height=540></canvas>
-      <div id="unity-loading-bar">
-        <div id="unity-logo"></div>
-        <div id="unity-progress-bar-empty">
-          <div id="unity-progress-bar-full"></div>
-        </div>
-      </div>
-      <div id="unity-mobile-warning">
-        WebGL builds are not supported on mobile devices.
-      </div>
-      <div id="unity-footer">
-        <div id="unity-webgl-logo"></div>
-        <div id="unity-fullscreen-button"></div>
+<div class="row">
+  <!-- 左コンテンツ -->
+  <div class="col-md-10">
+    <h4>
+      <%= render "layouts/search_form" %>
+    </h4>
+  </div>
+  <div class="col-md-2">
+  <% if current_user.present? %>
+    <h5>メモ</h5>
+    <% end %>
+  </div>
+</div>
+
+
+<div class="container">
+  <div class="row">
+    <!-- 左コンテンツ -->
+    <div class="col-md-11">
+      <iframe id="webgl-frame" class="iframe-inner" src="https://object-storage.tyo1.conoha.io/v1/nc_df3bdbc45bc04950b558834f5728517a/unityroom_production/game/26428/webgl/play.html" width="960px" height="540px frameborder=" scrolling="auto"></iframe>
+    </div>
+    <!-- 右サイドメニュー -->
+    <div class="col-md-1">
+      <div class="area line-height-1">
+        <% if current_user.present? %>
+          <% current_user.used_words.reverse.each do |item| %>
+            <p><%= link_to item.word,{:controller=>"items",:action=>"wordSearch",word: item.word, search:"perfect_match"}%></p>
+          <% end %>
+        <% end %>
       </div>
     </div>
-    <script>
-      var buildUrl = "../assets/Build";
-      var loaderUrl = buildUrl + "/ENspider_test1.loader.js";
-      var config = {
-        dataUrl: buildUrl + "/ENspider_test1.data.unityweb",
-        frameworkUrl: buildUrl + "/ENspider_test1.framework.js.unityweb",
-        codeUrl: buildUrl + "/ENspider_test1.wasm.unityweb",
-        streamingAssetsUrl: "StreamingAssets",
-        companyName: "DefaultCompany",
-        productName: "ENspider",
-        productVersion: "1.0",
-      };
-
-      var container = document.querySelector("#unity-container");
-      var canvas = document.querySelector("#unity-canvas");
-      var loadingBar = document.querySelector("#unity-loading-bar");
-      var progressBarFull = document.querySelector("#unity-progress-bar-full");
-      var fullscreenButton = document.querySelector("#unity-fullscreen-button");
-      var mobileWarning = document.querySelector("#unity-mobile-warning");
-
-      // By default Unity keeps WebGL canvas render target size matched with
-      // the DOM size of the canvas element (scaled by window.devicePixelRatio)
-      // Set this to false if you want to decouple this synchronization from
-      // happening inside the engine, and you would instead like to size up
-      // the canvas DOM size and WebGL render target sizes yourself.
-      // config.matchWebGLToCanvasSize = false;
-
-      if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
-        container.className = "unity-mobile";
-        // Avoid draining fillrate performance on mobile devices,
-        // and default/override low DPI mode on mobile browsers.
-        config.devicePixelRatio = 1;
-        mobileWarning.style.display = "block";
-        setTimeout(() => {
-          mobileWarning.style.display = "none";
-        }, 5000);
-      } else {
-        canvas.style.width = "960px";
-        canvas.style.height = "540";
-      }
-      loadingBar.style.display = "block";
-
-      var script = document.createElement("script");
-      script.src = loaderUrl;
-      script.onload = () => {
-        createUnityInstance(canvas, config, (progress) => {
-          progressBarFull.style.width = 100 * progress + "%";
-        }).then((unityInstance) => {
-          loadingBar.style.display = "none";
-          fullscreenButton.onclick = () => {
-            unityInstance.SetFullscreen(1);
-          };
-        }).catch((message) => {
-          alert(message);
-        });
-      };
-      document.body.appendChild(script);
-    </script>
-    <script>
-      var recaptureInputAndFocus = function() {
-      var canvas = document.getElementById("#canvas");
-      if(canvas) {
-        canvas.setAttribute("tabindex", "1");
-        canvas.focus(); 
-      } else
-        setTimeout(recaptureInputAndFocus, 100);
-      }
- 
-      recaptureInputAndFocus();
-      </script>
-  </body>
-</html>
-
-<%= link_to '単語検索', items_path %>
+ </div>
+</div>
