--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -25,7 +25,7 @@
       <div class="area line-height-1">
         <% if current_user.present? %>
           <% current_user.used_words.reverse.each do |item| %>
-            <p><%= link_to item.word,{:controller=>"items",:action=>"wordSearch",word: item.word, search:"perfect_match"}%></p>
+            <p><%= link_to item.word,{:controller=>"items",:action=>"wordSearch",word: item.word, search:"perfect_match"}, data: {"turbolinks" => false}%></p>
           <% end %>
         <% end %>
       </div>
