--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -1,4 +1,3 @@
-
 <div class="row">
   <!-- 左コンテンツ -->
   <div class="col-md-10">
@@ -25,7 +24,7 @@
       <div class="area line-height-1">
         <% if current_user.present? %>
           <% current_user.used_words.reverse.each do |item| %>
-            <p><%= link_to item.word,{:controller=>"items",:action=>"wordSearch",word: item.word, search:"perfect_match"}, data: {"turbolinks" => false}%></p>
+            <p><%= link_to item.word,{:controller=>"items",:action=>"wordSearch",word: item.word, search:"perfect_match", data: {"turbolinks" => false}}%></p>
           <% end %>
         <% end %>
       </div>
