--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -16,7 +16,7 @@
       <tbody>
         <tr>
           <td>
-            <p><%= link_to item.word,{:controller=>"items",:action=>"wordSearch",word: item.word, search:"perfect_match"}, data: {"turbolinks" => false}%></p>
+            <p><%= link_to item.word,{:controller=>"items",:action=>"wordSearch",word: item.word, search:"perfect_match", data: {"turbolinks" => false}}%></p>
           </td>
           <td>
             <%= item.mean %>
