--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -6,9 +6,16 @@
     </h4>
   </div>
   <div class="col-md-2">
-  <% if current_user.present? %>
-    <h5>メモ</h5>
+    
+    <% if  current_user.present? %>
+      <h5>メモ</h5>
+    <% else %>
+     <p>
+        ログインして単語を調べて登録し、<br>
+        メモを利用しよう
+      </p>
     <% end %>
+
   </div>
 </div>
 
@@ -23,9 +30,9 @@
     <div class="col-md-1">
       <div class="area line-height-1">
         <% if current_user.present? %>
-          <% current_user.used_words.reverse.each do |item| %>
-            <p><%= link_to item.word,{:controller=>"items",:action=>"wordSearch",word: item.word, search:"perfect_match"}%></p>
-          <% end %>
+            <% current_user.used_words.reverse.each do |item| %>
+              <p><%= link_to item.word,{:controller=>"items",:action=>"wordSearch",word: item.word, search:"perfect_match"}%></p>
+            <% end %>
         <% end %>
       </div>
     </div>
