--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -1,3 +1,4 @@
+<%= stylesheet_link_tag "games", :media => "all" %>
 <div class="row">
   <!-- 左コンテンツ -->
   <div class="col-md-10">
@@ -38,3 +39,6 @@
     </div>
  </div>
 </div>
+
+<%= link_to '利用規約', page_path('terms') %>
+<%= link_to 'プライバシーポリシー', page_path('privacy') %>
