--- a/app/assets/stylesheets/games.scss
+++ b/app/assets/stylesheets/games.scss
@@ -1,6 +1,25 @@
 p {
   font-size: 1.3em;
   line-height: 1.2em;
-  padding: 0px 20px 0px 10px;
+  padding: 0px 20px 0px 0px;
+}
+
+iframe {
+  width: 960px;
+  height: 540px;
+}
+
+@media (max-width: 699px) {
+  iframe {
+    width: 640px;
+    height: 360px;
+  }
+
+  .container {
+    width: 100%;
+    padding-right: 15px;
+    margin-right: auto;
+    max-width: 700px;
+  }
 }
 
