--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -12,6 +12,20 @@ table {
 
 }
 
+@media (max-width: 599px) {
+  table {
+    border-top:1px solid #4f4d47;
+    border-right:1px solid #4f4d47;
+    border-left:1px solid #4f4d47;
+    border-bottom:1px solid #4f4d47;
+  
+    width:500px;
+    border-spacing:0;
+    margin:0 auto;
+    margin-bottom: 30px;
+  }
+}
+
 th {
   border-left:1px solid #4f4d47;
   text-align:center;
