--- a/app/assets/stylesheets/games.scss
+++ b/app/assets/stylesheets/games.scss
@@ -9,6 +9,13 @@ iframe {
   height: 540px;
 }
 
+.container {
+  width: 100%;
+  padding-right: 15px;
+  margin-right: auto;
+  margin-left: 5%;
+}
+
 @media (max-width: 699px) {
   iframe {
     width: 640px;
@@ -20,6 +27,12 @@ iframe {
     padding-right: 15px;
     margin-right: auto;
     max-width: 700px;
+  }
+}
+
+@media (min-width: 1200px){
+  .container {
+    max-width: 1340px;
   }
 }
 
