--- a/app/assets/stylesheets/games.scss
+++ b/app/assets/stylesheets/games.scss
@@ -4,7 +4,12 @@ p {
   padding: 0px 20px 0px 0px;
 }
 
-
+a {
+  color: rgb(51, 162, 255);
+  text-decoration-color: initial;
+  background-color: transparent;
+  padding: 20px 10px; 
+}
 
 .container {
   width: 100%;
