--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -34,3 +34,4 @@
 
 <%= link_to '利用規約', page_path('terms') %>
 <%= link_to 'プライバシーポリシー', page_path('privacy') %>
+<%= link_to_unless_current 'お問い合わせ', new_contact_path %>
