--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -32,6 +32,6 @@
  </div>
 </div>
 
-<%= link_to '利用規約', page_path('terms') %>
-<%= link_to 'プライバシーポリシー', page_path('privacy') %>
-<%= link_to_unless_current 'お問い合わせ', new_contact_path %>
+<%= link_to '利用規約', page_path('terms'), class: "nav-links" %>
+<%= link_to 'プライバシーポリシー', page_path('privacy'), class: "nav-links" %>
+<%= link_to_unless_current 'お問い合わせ', new_contact_path, class: "nav-links" %>
