--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,10 +9,12 @@
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
 
     <%= javascript_importmap_tags %>
-    <%= render "layouts/header" %>
   </head>
 
   <body>
+    <%= render 'layouts/notifications' %>
+
+    <%= render "layouts/header" %>
     <%= yield %>
   </body>
 </html>
